@@ -1,3 +1,10 @@
+/*******************************************************************************
+ * Copyright (c) 2010 Oak Ridge National Laboratory.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ ******************************************************************************/
 package org.csstudio.opibuilder.persistence;
 
 import java.io.File;
@@ -121,7 +128,7 @@ public class URLPath implements IPath {
 			return false;
 		}
 		boolean hasTrailing = 
-			new Character(url.charAt(url.length()-1)).equals(IPath.SEPARATOR);
+			Character.valueOf(url.charAt(url.length()-1)).equals(IPath.SEPARATOR);
 		return hasTrailing;
 	}
 
@@ -149,7 +156,7 @@ public class URLPath implements IPath {
 	}
 
 	public boolean isRoot() {
-		if(device != null & segmentCount()==0)
+		if(device != null && segmentCount()==0)
 			return true;
 		return false;
 	}
